--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,34 @@ header button {
   font-size: 20px;
 }
 
+.DiaryEditor .emotion_list_wrapper {
+  display: grid;
+  grid-template-columns: repeat(
+    5,
+    auto
+  ); /* 격자를 5개를 만들고 item의 사이즈는 자동*/
+  gap: 2%;
+}
+
+.DiaryEditor textarea {
+  font-family: "Nanum Pen Script";
+  font-size: 20px;
+  box-sizing: border-box;
+  width: 100%;
+  min-height: 200px;
+  resize: vertical;
+  border: none;
+  border-radius: 5px;
+  background-color: #ececec;
+  padding: 20px;
+}
+
+.DiaryEditor .control_box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /* EmotionItem */
 
 .EmotionItem {
@@ -224,15 +252,6 @@ header button {
   flex-direction: column; /* 정렬이 세로로 유지가 된다. -> 이미지 아래에 텍스트가 나오도록*/
   justify-content: center;
   align-items: center;
-}
-
-.DiaryEditor .emotion_list_wrapper {
-  display: grid;
-  grid-template-columns: repeat(
-    5,
-    auto
-  ); /* 격자를 5개를 만들고 item의 사이즈는 자동*/
-  gap: 2%;
 }
 
 .EmotionItem img {
